# StateSpacing

./: .gitignore  requirements.txt  setup.py  todo.txt  welcome.py
LocalLevelModelRust/: Cargo.toml
LocalLevelModelRust/src/: main.rs  read_data.rs
data/: Untitled.ipynb  llt.txt  llts.txt  lltsX.txt  regressor.txt  standard_regression  standard_regression.txt  standard_regressionX.txt  standard_regressionY.txt
nbs/: Animated Filtering and Smoothing.ipynb  Cython LGM Development.ipynb  Cython Learning.ipynb  Data Generating Notebook.ipynb  LGM Development-Numpy.ipynb  LGM Development.ipynb  LGM Forecast Development.ipynb  LGM-DEMO.ipynb  LGM_CLASS NOTEBOOK.ipynb  Local Level Case Study.ipynb  Local Level Development Notebook.ipynb  Smoothing demo.ipynb  Speed Testing.ipynb  Test Development.ipynb  Testing the Logic of Cython.ipynb  Untitled.ipynb
rust_statespace/: Cargo.toml  pyproject.toml  requirements_rust.txt
rust_statespace/.github/workflows/: CI.yml
rust_statespace/src/: glm.rs  lib.rs  main.rs  read_data.rs
statespace/: Class Development new.ipynb  Class Development.ipynb  LocalLevelModel.py  StateSpacingClasses.py  StateSpacingKalman.py  StateSpacingMath.py  StateSpacingPlotting.py  StateSpacingProtocols.py  __init__.py  debug_niels.py  utils.py
