[package]
name = "rust_statespace"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_statespace"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.15.1"
ndarray-linalg = { version = "0.13", features = ["openblas-system"] }
numpy = "0.15"
ndarray = "*"
csv = "*"
